--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@use './styles/reset';
+@use './styles/vars';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
