working navbar links with routes

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,14 +5,15 @@
   text-align: center;
   background-color: vars.$mainBackground;
   color: vars.$mainColor;
+  height: 100vh;
 }
 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+// @media (prefers-reduced-motion: no-preference) {
+//   .App-logo {
+//     animation: App-logo-spin infinite 20s linear;
+//   }
+// }
 
 
 // @keyframes App-logo-spin {
