--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,3 +7,11 @@
     font-size: calc(10px + 2vmin);
     color: white;
   }
+
+  .header__nav__menu--item{
+    
+    
+  }
+  .active {
+    text-decoration: underline;
+  }
