--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,3 +1,6 @@
 .home {
-    height: 100%;
+    height: 100vh;
+    background-image: url("../../assets/home/background-home-desktop.jpg");
+    background-size:cover ;
+    font-family: 'Bellefair', serif;
 }
