styling display and components

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,10 +8,11 @@
   justify-content: space-between;
   align-items: center;
   // font-size: calc(10px + 2vmin);
-  // font-family: 'Bellefair', serif;
   font-family: 'Barlow Condensed', sans-serif;
   color: vars.$secondaryColor;
-
+  position: fixed;
+  top: 20px;
+  width: 100%;
 
   &__left {
     display: flex;
@@ -35,7 +36,6 @@
     padding: vars.$gutter;
     height:4* vars.$gutter;
     width: 50%;
-    // background-color: rgba(142, 142, 142, 0.601);
     backdrop-filter: blur(15px);
     //ul
     &__menu{
