--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,8 +8,10 @@
   justify-content: space-between;
   align-items: center;
   // font-size: calc(10px + 2vmin);
+  font-size: 16px;
+  letter-spacing: 2.7px;
   font-family: 'Barlow Condensed', sans-serif;
-  color: vars.$secondaryColor;
+  color: vars.$mainColor;
   position: fixed;
   top: 20px;
   width: 100%;
@@ -17,7 +19,6 @@
   &__left {
     display: flex;
     width: 40%;
-
 
     &__logo {
       padding: vars.$gutter;
@@ -32,7 +33,7 @@
   }
   &__nav {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     padding: vars.$gutter;
     height:4* vars.$gutter;
     width: 50%;
@@ -40,10 +41,13 @@
     //ul
     &__menu{
       display: flex;
+      justify-content: space-around;
       align-items: center;
+      width: 100%;
       &--item {
         margin-right: vars.$gutter;
         font-size: 1rem;
+        text-transform: uppercase;
       }
     }
     
