--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -2,14 +2,22 @@
 @use '../../styles/reset';
 
 .home {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
     height: 100vh;
     background-image: url("../../assets/home/background-home-desktop.jpg");
     background-size:cover;
     font-family: 'Bellefair', serif;
     text-align: left;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
+    @media(max-width:768px){
+        flex-direction: column;
+        align-items: center;
+        background-image: url("../../assets/home/background-home-tablet.jpg");
+        background-size:cover;
+        height: auto;
+    }
+    
     
     &__left {
         padding: 2* vars.$gutter;
@@ -20,6 +28,13 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+
+        @media(max-width:768px){
+            align-items: center;
+            margin-top:8* vars.$gutter;
+            margin-bottom: 0;
+            width: 35rem;    
+        }
         &__h5 {
             text-transform: uppercase;  
             font-family: 'Barlow Condensed', sans-serif;
@@ -41,6 +56,9 @@
         justify-content: center;
         align-items: center; 
         border: none;
+        @media(max-width:768px){
+            margin-bottom: 1* vars.$gutter;
+        }
         &:hover {
             border: 52px solid rgba(254, 252, 252, 0.1);
         }
@@ -66,4 +84,8 @@ p {
     color: vars.$secondaryColor;
     font-size: 18px;
     width: 100%;
+    @media(max-width:768px){
+        text-align: center;
+    }
+    
 }
