--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,11 +2,8 @@
 @use '../../styles/reset';
 
 .header {
-  // padding-top: vars.$gutter;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  // font-size: calc(10px + 2vmin);
   font-size: 16px;
   letter-spacing: 2.7px;
   font-family: 'Barlow Condensed', sans-serif;
@@ -19,7 +16,8 @@
   }
   &__left {
     display: flex;
-    width: 50%;
+    flex-grow: 2;
+    padding-right:2* vars.$gutter;
 
     &__logo {
       padding: vars.$gutter;
@@ -27,8 +25,8 @@
     &__divider {
       padding: vars.$gutter;
       padding-right: 2* vars.$gutter;
-      min-width: 70%;
-      max-width:80%;
+      // min-width: 50%;
+      width:100%;
       height: 10px;
       border-bottom: 1px solid vars.$secondaryColor;
       @media(max-width:768px){
@@ -41,8 +39,8 @@
     justify-content: center;
     height:4* vars.$gutter;
     min-width: 50%;
+    width: auto;
     backdrop-filter: blur(15px);
-    // background-color: aqua;
     //ul
     &__menu {
       display: flex;
@@ -51,7 +49,6 @@
       width: 100%;
       &--item {
         display: flex;
-
         margin-right: vars.$gutter;
         font-size: 1rem;
         text-transform: uppercase;
