--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -18,7 +18,6 @@
         height: auto;
     }
     
-    
     &__left {
         padding: 2* vars.$gutter;
         width: 45rem;
@@ -49,15 +48,15 @@
     }
     &__right {
         width: 300px;
-        height: 300px;
+        height: auto;
         border-radius: 50%;
         margin-bottom: 3* vars.$gutter;
         display: flex;
         justify-content: center;
         align-items: center; 
-        border: none;
+        border: 52px solid rgba(254, 252, 252, 0);
         @media(max-width:768px){
-            margin-bottom: 1* vars.$gutter;
+            margin-bottom: 0.5* vars.$gutter;
         }
         &:hover {
             border: 52px solid rgba(254, 252, 252, 0.1);
