--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -40,23 +40,62 @@
     height:4* vars.$gutter;
     min-width: 50%;
     width: auto;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(25px);
+    @media(max-width:650px){
+      height: 100vh;
+      width:17* vars.$gutter ;
+      flex-direction: column;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-end;
+      margin-top: 2* vars.$gutter;
+    }
+    &--close {
+      display: none;
+      @media(max-width:650px){
+        background-color: 0;
+        font-size: vars.$gutter;
+        background:none;
+        display: block;
+        color: vars.$secondaryColor;
+        background-color: none;
+        width:1.5* vars.$gutter;
+        height: 1.5* vars.$gutter;
+      }
+    }
     //ul
     &__menu {
       display: flex;
       justify-content: space-around;
       align-items: center;
-      width: 100%;
-      &--item {
+      width: 100%; 
+      @media(max-width:650px){
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin-top:2* vars.$gutter;
+      }
+      &--li{
         display: flex;
+      }
+      &--item {
         margin-right: vars.$gutter;
         font-size: 1rem;
         text-transform: uppercase;
+        @media(max-width:650px){
+          text-align: left;
+          margin-right: 0;
+          margin-top:2* vars.$gutter;
+          width: 100%;
+        }
         &:hover {
         text-decoration: underline;
         text-underline-offset: 1.5* vars.$gutter;
         text-decoration-color: grey;
         text-decoration-thickness: 3px;
+        @media(max-width:650px){
+          text-decoration: none;
+        }
         }
       }
     }
@@ -67,9 +106,19 @@
   @media(max-width:768px){
     display: none;
   }
+  @media(max-width:650px){
+    display:flex;
+    flex-wrap: nowrap;
+  }
 }
   .active {
     text-decoration: underline;
     text-underline-offset: 1.5* vars.$gutter;
     text-decoration-thickness: 3px;
+    @media(max-width:650px){
+      text-decoration: none;
+    }
+  }
+  pre {
+    display: flex;
   }
