--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,9 +11,7 @@
   position: fixed;
   top: 20px;
   width: 100%;
-  // @media(max-width:650px){
-    
-  // }
+
   &__left {
     display: flex;
     flex-grow: 2;
@@ -41,8 +39,9 @@
     width: auto;
     backdrop-filter: blur(25px);
     @media(max-width:768px){
-      // background-color: aqua;
-      // backdrop-filter: blur(1px);
+      background-color: rgba(49, 49, 49, 0.278);
+      width: 60%;
+      padding-left: vars.$gutter;
     }
     @media(max-width:650px){
       height: 100vh;
@@ -51,42 +50,47 @@
       display: flex;
       justify-content: flex-start;
       align-items: flex-end;
-      margin-top: 2* vars.$gutter;
+      margin-top: -1* vars.$gutter;
       padding-left: 3* vars.$gutter;
+      padding-top: 3* vars.$gutter;
       position: relative;
     }
+    // button close mobile navbar
     &--close {
       visibility: hidden;
       @media(max-width:650px){
         visibility: visible;
         background-color: 0;
-        font-size: vars.$gutter;
+        font-size: 2.5* vars.$gutter;
         background:none;
+        border: none;
         display: block;
         color: vars.$secondaryColor;
         background-color: none;
         width:1.5* vars.$gutter;
         height: 1.5* vars.$gutter;
         position: absolute;
-        top:0;
-        right: 10px;
+        top:40px;
+        right: 60px;
       }
     }
+    // Burger menu open navbar mobile
     &--open {
       visibility: hidden;
       @media(max-width:650px){
         visibility: visible;
         background-color: 0;
-        font-size: vars.$gutter;
+        font-size: 2* vars.$gutter;
         background:none;
+        border: none;
         display: block;
         color: vars.$secondaryColor;
         background-color: none;
         width:1.5* vars.$gutter;
         height: 1.5* vars.$gutter;
         position: fixed;
-        top:60px;
-        right: 10px;
+        top:40px;
+        right: 50px;
       }
     }
     //ul
