--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -20,9 +20,9 @@
     
     &__left {
         padding: 2* vars.$gutter;
-        width: 45rem;
+        width: 35rem;
         height: 50%;
-        margin-bottom: 3* vars.$gutter;
+        // margin-bottom: vars.$gutter;
         font-size: 28px;
         display: flex;
         flex-direction: column;
@@ -30,7 +30,7 @@
 
         @media(max-width:768px){
             align-items: center;
-            margin-top:8* vars.$gutter;
+            margin-top:5* vars.$gutter;
             margin-bottom: 0;
             width: 35rem;    
         }
@@ -38,12 +38,30 @@
             text-transform: uppercase;  
             font-family: 'Barlow Condensed', sans-serif;
             color: vars.$secondaryColor;
+            font-size: 28px;
             letter-spacing: 4.75px;
+            margin-bottom: vars.$gutter;
+            @media(max-width:768px){
+                margin-bottom: 0; 
+            }
         }
         &__h1 {
             font-size: 150px;
             text-transform: uppercase;
             padding: vars.$gutter 0;
+            // margin-bottom: 1* vars.$gutter;
+        }
+        &__p {
+            text-align: left;
+            color: vars.$secondaryColor;
+            font-size: 18px;
+            width: 100%;
+            font-family: 'Barlow', sans-serif;
+            line-height: 1.5* vars.$gutter;
+            @media(max-width:768px){
+                // font-size: 16px;
+                text-align: center;
+            }
         }
     }
     &__right {
@@ -78,13 +96,16 @@
     }
 }
 
-p {
-    text-align: left;
-    color: vars.$secondaryColor;
-    font-size: 18px;
-    width: 100%;
-    @media(max-width:768px){
-        text-align: center;
-    }
+// .home__left__p {
+//     text-align: left;
+//     color: vars.$secondaryColor;
+//     font-size: 18px;
+//     width: 100%;
+//     font-family: 'Barlow', sans-serif;
+//     line-height: 1.5* vars.$gutter;
+//     @media(max-width:768px){
+//         // font-size: 16px;
+//         text-align: center;
+//     }
     
-}
+// }
