--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -30,6 +30,9 @@
         flex-direction: column;
         width: 50%;
         height: 50%;
+        &--nav {
+            //subcomponent
+        }
         &--name {
             background-color: red;
             font-size: 6* vars.$gutter;
