--- a/src/components/Destination/destinationNav.scss
+++ b/src/components/Destination/destinationNav.scss
@@ -4,10 +4,16 @@
 .destination__info__nav {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    // background-color: aqua;
+    height: 3rem;
     //button
     &--link {
         border: none;
         background: none;
         color: vars.$secondaryColor;
     }
+}
+.active {
+
 }
