--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -8,13 +8,13 @@
     font-family: 'Bellefair', serif;
     text-transform: uppercase;
     height: 100vh;
-    background-image: url('../../assets/destination/background-destination-desktop.jpg');
+    background-image: url('../../../public/assets/destination/background-destination-desktop.jpg');
     background-size:cover;
     @media(max-width:768px){
-        background-image: url('../../assets/destination/background-destination-tablet.jpg');
+        background-image: url('../../../public/assets/destination/background-destination-tablet.jpg');
     }
     @media(max-width:650px){
-        background-image: url('../../assets/destination/background-destination-mobile.jpg');
+        background-image: url('../../../public/assets/destination/background-destination-mobile.jpg');
     }
     &__view {
         display: flex;
