destinations layout style wip

--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -3,7 +3,7 @@
 
 .destination {
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-around;
     align-items: flex-end;
     font-family: 'Bellefair', serif;
     text-transform: uppercase;
@@ -21,10 +21,12 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        // background-color: azure;
         width: 50%;
-        margin: 3* vars.$gutter;
-        height: 70%;
+        margin: 3* vars.$gutter vars.$gutter;
+        padding:vars.$gutter ;
+        height: fit-content;
+        min-height: 70%;
+        // background-color: rgb(67, 68, 68);
         &__h5 {
             display: flex;
             align-self: flex-start;
@@ -35,21 +37,26 @@
             // background-color: rebeccapurple;
         }
         &--img {
-            // background-color: bisque;
-            // display: flex;
-            // align-content: center;
-            // align-items: center;
-            // justify-content: center;
-            width: 100%;
-            height: auto;
+            display: flex;
+            max-width: 100%;
+            max-height: 100%;
         }
     }
     
     &__info {
+        padding: 2* vars.$gutter vars.$gutter;
         display: flex;
         flex-direction: column;
-        width: 50%;
-        height: 50%;
+        max-width: 50%;
+        height: fit-content;
+        margin: 3* vars.$gutter vars.$gutter;
+        // background-color: rgb(43, 43, 41);
+        @media(max-width:768px){
+
+        }
+        @media(max-width:650px){
+           
+        }
         &--nav {
             //subcomponent
         }
@@ -59,6 +66,28 @@
         }
         &--desc {
             color: vars.$secondaryColor;
+            padding-bottom: 3rem;
+            border-bottom: 1px solid #383B4B;
+        }
+        &__travel {
+            display: flex;
+            // justify-content: flex-start;
+            text-align: left;
+            padding-top: 1rem;
+            color: vars.$mainColor;
+            font-size: 28px;
+            &__p {
+                text-transform: uppercase;
+                color: vars.$secondaryColor;
+                font-size: 12px;
+                padding: 1rem 0;
+            }
+            &--dist {
+                width: 50%;
+            }
+            &--time {
+                width: 50%;
+            }
         }
     }
     
