--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -12,6 +12,8 @@
     background-size:cover;
     @media(max-width:768px){
         background-image: url('../../../public/assets/destination/background-destination-tablet.jpg');
+        flex-direction: column;
+        height: auto;
     }
     @media(max-width:650px){
         background-image: url('../../../public/assets/destination/background-destination-mobile.jpg');
@@ -19,7 +21,7 @@
     &__view {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         width: 50%;
         margin: 3* vars.$gutter vars.$gutter;
@@ -27,6 +29,15 @@
         height: fit-content;
         min-height: 70%;
         // background-color: rgb(67, 68, 68);
+        @media(max-width:768px){
+            width: 100%;
+            margin: 7* vars.$gutter vars.$gutter;
+            margin-bottom: 0;
+            align-self: center;
+        }
+        @media(max-width:650px){
+           
+        }
         &__h5 {
             display: flex;
             align-self: flex-start;
@@ -35,6 +46,11 @@
             font-size: 25px;
             color:vars.$mainColor;
             // background-color: rebeccapurple;
+            @media(max-width:768px){
+               
+                margin-bottom:3* vars.$gutter;
+                align-self: center;
+            }
         }
         &--img {
             display: flex;
@@ -47,12 +63,18 @@
         padding: 2* vars.$gutter vars.$gutter;
         display: flex;
         flex-direction: column;
-        max-width: 50%;
+        // max-width: 600px;
+        // max-width: 400px;
+        width: 50%;
         height: fit-content;
         margin: 3* vars.$gutter vars.$gutter;
         // background-color: rgb(43, 43, 41);
         @media(max-width:768px){
-
+            width: 80%;
+            margin-top: 0;
+            margin:  1rem 0;
+            align-items: center;
+            align-self: center;
         }
         @media(max-width:650px){
            
@@ -63,6 +85,8 @@
         &--name {
             // background-color: red;
             font-size: 6* vars.$gutter;
+            // font-size: max(6* vars.$gutter, 1vw);
+            
         }
         &--desc {
             color: vars.$secondaryColor;
@@ -71,11 +95,15 @@
         }
         &__travel {
             display: flex;
-            // justify-content: flex-start;
+            justify-content: space-between;
             text-align: left;
             padding-top: 1rem;
             color: vars.$mainColor;
             font-size: 28px;
+            @media(max-width:768px){
+                width: 100%;
+                text-align: center;
+            }
             &__p {
                 text-transform: uppercase;
                 color: vars.$secondaryColor;
@@ -95,4 +123,6 @@
 .span {
     font-weight: bold;
     color: vars.$secondaryColor;
+    display: block;
+    color: #383B4B;
 }
