--- a/src/components/Destination/destinationNav.scss
+++ b/src/components/Destination/destinationNav.scss
@@ -6,7 +6,11 @@
     justify-content: space-around;
     align-items: center;
     height: 3rem;
-    
+    @media(max-width:768px){
+        width: 100%;
+        margin-bottom: vars.$gutter;
+        
+    }
     //button
     &--link {
         border: none;
@@ -14,6 +18,7 @@
         color: vars.$secondaryColor;
         text-transform: uppercase;
         padding-bottom: 1rem;
+        font-size: 1rem;
         &:hover {
             border-bottom: 2px solid grey;
             
