--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -36,7 +36,7 @@
             align-self: center;
         }
         @media(max-width:650px){
-           
+           margin-top: 4* vars.$gutter ;
         }
         &__h5 {
             display: flex;
@@ -47,15 +47,21 @@
             color:vars.$mainColor;
             // background-color: rebeccapurple;
             @media(max-width:768px){
-               
                 margin-bottom:3* vars.$gutter;
                 align-self: center;
+            }
+            @media(max-width:650px){
+                justify-content: center; ;
             }
         }
         &--img {
             display: flex;
             max-width: 100%;
             max-height: 100%;
+            @media(max-width:650px){
+                justify-content: center;
+                width: 60%;
+             }
         }
     }
     
@@ -77,7 +83,8 @@
             align-self: center;
         }
         @media(max-width:650px){
-           
+           padding: 0;
+           width: 90%;
         }
         &--nav {
             //subcomponent
@@ -86,12 +93,16 @@
             // background-color: red;
             font-size: 6* vars.$gutter;
             // font-size: max(6* vars.$gutter, 1vw);
-            
+            @media(max-width:650px){
+                font-size: 4* vars.$gutter;
+                margin-bottom: vars.$gutter;
+            }
         }
         &--desc {
             color: vars.$secondaryColor;
             padding-bottom: 3rem;
             border-bottom: 1px solid #383B4B;
+            line-height: 2rem;
         }
         &__travel {
             display: flex;
@@ -104,6 +115,11 @@
                 width: 100%;
                 text-align: center;
             }
+            @media(max-width:650px){
+                flex-direction: column;
+                align-items: center;
+                margin-bottom: vars.$gutter;
+            }
             &__p {
                 text-transform: uppercase;
                 color: vars.$secondaryColor;
@@ -115,14 +131,17 @@
             }
             &--time {
                 width: 50%;
+                @media(max-width:650px){
+                    margin-bottom: vars.$gutter;
+                }
             }
         }
     }
     
 }
-.span {
+.em {
     font-weight: bold;
     color: vars.$secondaryColor;
-    display: block;
+    // display: block;
     color: #383B4B;
 }
