--- a/src/components/Destination/destinationNav.scss
+++ b/src/components/Destination/destinationNav.scss
@@ -6,26 +6,29 @@
     justify-content: space-around;
     align-items: center;
     height: 3rem;
+    margin-bottom: vars.$gutter;  
     @media(max-width:768px){
         width: 100%;
         margin-bottom: vars.$gutter;     
     }
-    
     //button
     &--link {
         border: none;
         background: none;
         color: vars.$secondaryColor;
         text-transform: uppercase;
-        padding-bottom: 1rem;
+        padding-bottom: 0.9rem;
         font-size: 1rem;
         &:hover {
             border-bottom: 2px solid grey;
-            
-            
         }
     }
 }
 .active {
-
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-thickness: 3px;
+    &:hover{
+        border-bottom: 0;
+    }
 }
