--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -37,9 +37,10 @@
     height:4* vars.$gutter;
     min-width: 50%;
     width: auto;
+    font-weight: 200;
     backdrop-filter: blur(25px);
+    background-color: rgba(89, 89, 89, 0.133);
     @media(max-width:768px){
-      background-color: rgba(49, 49, 49, 0.278);
       width: 60%;
       padding-left: vars.$gutter;
     }
@@ -132,7 +133,7 @@
   }
 }
 .span {
-  font-weight: bolder;
+  font-weight: 900;
   @media(max-width:768px){
     display: none;
   }
