--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -14,6 +14,18 @@
     font-family: 'Bellefair', serif;
     font-size: vars.$gutter;
     
+    @media(max-width:768px){
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        height: auto;
+    }       
+        
+    @media(max-width:650px){
+        align-items: center;
+        margin-bottom: vars.$gutter;
+    }
+    
     &__info {
         display: flex;
         flex-direction: column;
@@ -23,10 +35,25 @@
         margin-bottom: 2* vars.$gutter;
         padding: vars.$gutter;
         margin-left: 7rem;
+        @media(max-width:768px){
+            align-self: center;
+            margin-top: 9rem;
+            width: 100%;
+            margin:  9rem 0 2rem;
+            align-items: center;
+        }
         &__h5 {
             color:vars.$mainColor;
             margin-bottom: 2* vars.$gutter;
-            font-size: 28px;
+            font-size: 32px;
+            font-family: 'Barlow Condensed', sans-serif;
+            font-weight: 300;
+            @media(max-width:768px){
+                width: 100%;
+                text-align: left;
+                font-size: 28px;
+                margin-bottom: 3* vars.$gutter;
+            }
         }
         &__role {
             color:grey;
@@ -37,6 +64,11 @@
             font-size: 2.2* vars.$gutter;
             margin-bottom:  2rem ;
             width: max-content;
+            @media(max-width:768px){
+                width: 100%;
+                margin-bottom: 0.5rem;
+                font-size: 36px
+            }
         }
         &__bio {
             width: 470px;
@@ -47,6 +79,12 @@
             font-weight: 300;
             text-transform: none;
             text-align: left;
+            @media(max-width:768px){
+                width: 100%;
+                padding:  1rem 3rem;
+                text-align: center;
+                font-weight: 200;
+            }
         }
         &__slider {
             margin-top: vars.$gutter;
@@ -55,7 +93,7 @@
             color: #383B4B;
             margin: 0.5rem; 
                 &:hover {
-                    color: grey;
+                color: grey;
                 }
             }
         }
@@ -64,6 +102,13 @@
     &__img{
         width: 50%;
         text-align: center;
+        
+        @media(max-width:768px){
+            display: flex;
+            justify-content: center;
+            width: 100%;
+
+        }
         &--pic{
             
         }
@@ -74,7 +119,4 @@
 }
 .icon {
     width: 1rem;
-}
-.em {
-    
 }
