--- a/src/components/Destination/destination.scss
+++ b/src/components/Destination/destination.scss
@@ -42,6 +42,7 @@
             align-self: flex-start;
             width: 100%;
             font-family: 'Barlow Condensed', sans-serif;
+            font-weight: 300;
             font-size: 25px;
             color:vars.$mainColor;
             @media(max-width:768px){
