--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -22,8 +22,8 @@
     }       
         
     @media(max-width:650px){
-        align-items: center;
-        margin-bottom: vars.$gutter;
+        // align-items: center;
+        // margin-bottom: vars.$gutter;
     }
     
     &__info {
@@ -42,6 +42,10 @@
             margin:  9rem 0 2rem;
             align-items: center;
         }
+        @media(max-width:650px){
+            margin-top: 4* vars.$gutter;
+
+        }
         &__h5 {
             color:vars.$mainColor;
             margin-bottom: 2* vars.$gutter;
@@ -54,11 +58,20 @@
                 font-size: 28px;
                 margin-bottom: 3* vars.$gutter;
             }
+            @media(max-width:650px){
+                order:-5;
+                margin-bottom:2* vars.$gutter;
+                display: flex;
+                justify-content: center;
+            }
         }
         &__role {
             color:grey;
             margin-bottom:  1rem ;
             font-size: 32px;
+            @media(max-width:650px){
+                // order:2;
+            }
         }
         &__name {
             font-size: 2.2* vars.$gutter;
@@ -89,6 +102,10 @@
         &__slider {
             margin-top: vars.$gutter;
             width: 60%;
+            @media(max-width:650px){
+                order:-1;
+                margin-bottom:2*  vars.$gutter;
+            }
             &--link {
             color: #383B4B;
             margin: 0.5rem; 
@@ -102,15 +119,23 @@
     &__img{
         width: 50%;
         text-align: center;
-        
         @media(max-width:768px){
             display: flex;
             justify-content: center;
-            width: 100%;
-
+            width: 95%;
+        }
+        @media(max-width:650px){
+            border-bottom: 1px solid #383B4B;
+            margin-bottom: vars.$gutter;
+            order:-4;
+            // width: 500px;
+            height: 500px;
         }
         &--pic{
-            
+            @media(max-width:650px){
+                object-fit: scale-down;
+                padding: 0 5rem;
+            }
         }
     }
 }
