--- a/src/components/Crew/crew.scss
+++ b/src/components/Crew/crew.scss
@@ -15,6 +15,7 @@
     font-size: vars.$gutter;
     
     @media(max-width:768px){
+        background-image: url('../../../public/assets/crew/background-crew-tablet.jpg');
         flex-direction: column;
         align-items: center;
         text-align: center;
@@ -22,8 +23,7 @@
     }       
         
     @media(max-width:650px){
-        // align-items: center;
-        // margin-bottom: vars.$gutter;
+        background-image: url('../../../public/assets/crew/background-crew-mobile.jpg');
     }
     
     &__info {
