--- a/src/components/Technology/technology.scss
+++ b/src/components/Technology/technology.scss
@@ -1,2 +1,35 @@
 @use '../../styles/vars';
 @use '../../styles/reset';
+
+.technology {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    
+    &__h5 {
+        width: 100%;
+        background-color: aqua;
+    }
+    &__infos {
+        &__nav {
+            height: 200px;
+            
+            &--link{
+                width: 50px;
+                height: 50px;
+                color: azure;
+            }
+        }
+        &__data {
+            height: 500px;
+            &--name {
+    
+            }
+            &--desc {
+    
+            }
+        }
+    }
+    
+}
